inserito grafico esempio

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             $("#stage1").css("display", "none")
             $("#stage2").css("display", "block")
             $("#stage2").append("<span>"+params+"</span>")
-            $("#stage2").append("<br><br><a href='/quattrogatti'>reset form</a>")
+            $("#stage2").append('<div class="itemFullText"><p id="sorting"></p><p id="random"></p><svg width="725" height="300"> <rect fill="#0000ff" width="27" x="13" height="287.5" y="12.5"></rect> <rect fill="#000050" width="27" x="41" height="25" y="275"></rect><rect fill="#00008c" width="27" x="69" height="43.75" y="256.25"></rect><rect fill="#0000ff" width="27" x="97" height="100" y="200"></rect><rect fill="#0000ff" width="27" x="125" height="162.5" y="137.5"></rect><br><br><a href="/quattrogatti">reset form</a>')
         }
         else {   
                         
