--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
 <script>
 
 var margin = {top: 40, right: 20, bottom: 30, left: 40},
-    width = 960 - margin.left - margin.right,
-    height = 500 - margin.top - margin.bottom;
+    width = 475 - margin.left - margin.right,
+    height = 300 - margin.top - margin.bottom;
 
 var formatPercent = d3.format(".0%");
 
@@ -267,7 +267,7 @@ d3.csv("barre.csv", type, function(error, data) {
       .attr("y", 6)
       .attr("dy", ".71em")
       .style("text-anchor", "end")
-      .text("Frequency");
+      .text("Famiglie");
 
   svg.selectAll(".bar")
       .data(data)
