--- a/index.html
+++ b/index.html
@@ -210,6 +210,36 @@
         box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(126, 239, 104, 0.6);
         outline: 0 none;
     }
+        .bar rect
+        {
+            /*
+            fill: black;
+            stroke: black;
+            */
+        }
+        .label
+        {
+            font-family: Verdana;
+            font-size: 15pt;
+            color: gray;
+            fill-opacity: .6;
+        }
+        .value
+        {
+            font-family: Verdana;
+            font-size: 11pt;
+            color: gray;
+            fill-opacity: .6;
+        }
+
+        .tick_label
+        {
+            font-size: 15pt;
+            font-family: Verdana;
+            color: gray;
+            fill-opacity: .6;
+        }
+
     </style>
 
 <script>
@@ -218,7 +248,7 @@ var margin = {top: 40, right: 20, bottom: 30, left: 40},
     width = 475 - margin.left - margin.right,
     height = 300 - margin.top - margin.bottom;
 
-var formatPercent = d3.format(".0%");
+var formatPercent = d3.format(""); // come formattare indicatori asse Y
 
 var x = d3.scale.ordinal()
     .rangeRoundBands([0, width], .1);
@@ -239,7 +269,7 @@ var tip = d3.tip()
   .attr('class', 'd3-tip')
   .offset([-10, 0])
   .html(function(d) {
-    return "<strong>Famiglie a "+ d.euro +" euro:</strong> <span style='color:red'>" + d.barre + "</span>";
+    return "<strong>Famiglie a "+ d.euro +"000 euro:</strong> <span style='color:red'>" + d.barre + "</span>";
   })
 
 var svg = d3.select("#d3").append("svg")
@@ -263,6 +293,7 @@ d3.csv("barre.csv", type, function(error, data) {
       .attr("class", "y axis")
       .call(yAxis)
     .append("text")
+      .attr("class", "value")
       .attr("transform", "rotate(-90)")
       .attr("y", 6)
       .attr("dy", ".71em")
