--- a/index.html
+++ b/index.html
@@ -212,10 +212,12 @@
     }
         .bar rect
         {
-            /*
-            fill: black;
-            stroke: black;
-            */
+            fill: orange;
+            stroke: oranged;
+            
+        }
+        .bar:hover {
+            fill: orangered;
         }
         .label
         {
