--- a/index.html
+++ b/index.html
@@ -226,6 +226,13 @@
             color: gray;
             fill-opacity: .6;
         }
+        .axis path,
+        .axis line {
+            fill: none;
+            stroke: grey;
+            stroke-width: 1;
+            shape-rendering: crispEdges;
+        }
         .value
         {
             font-family: Verdana;
@@ -250,7 +257,7 @@ var margin = {top: 40, right: 20, bottom: 30, left: 40},
     width = 475 - margin.left - margin.right,
     height = 300 - margin.top - margin.bottom;
 
-var formatPercent = d3.format(""); // come formattare indicatori asse Y
+var formatPercent = d3.format("000"); // come formattare indicatori asse Y
 
 var x = d3.scale.ordinal()
     .rangeRoundBands([0, width], .1);
