--- a/index.html
+++ b/index.html
@@ -307,7 +307,8 @@ function type(d) {
             fill-opacity: .6;
         }
         .x_axis,
-        .x_axis {
+        .y_axis {
+            font-size: 12pt;
             fill: none;
             stroke: grey;
             stroke-width: 1;
