--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ function type(d) {
         }
         .x_axis,
         .y_axis {
-            font-size: 12pt;
+            font-size: .6em;
             fill: none;
             stroke: grey;
             stroke-width: 1;
