--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@ function type(d) {
         {
             fill: orange;
             stroke: oranged;
+            margin-right: 3px;
             
         }
         .bar:hover {
