--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ d3.csv("barre.csv", type, function(error, data) {
     .enter().append("rect")
       .attr("class", "bar")
       .attr("x", function(d) { return x(d.euro); })
-      .attr("width", x.rangeBand())
+      //.attr("width", x.rangeBand())
       .attr("y", function(d) { return y(d.barre); })
       .attr("height", function(d) { return height - y(d.barre); })
       .on('mouseover', tip.show)
