--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@ var margin = {top: 40, right: 20, bottom: 30, left: 40},
 
 var format = d3.format(""); // come formattare indicatori asse Y
 
-/*var x = d3.scale.ordinal()
+var x = d3.scale.ordinal()
     .rangeRoundBands([0, width], .1);
-*/
+
 var y = d3.scale.linear()
     .range([height, 0]);
 
