--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.2.2/d3.v3.min.js"></script>
   <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+  <link href="d3-tip.css" rel="stylesheet">
 </head>
     <body>
       <div class="container">   
@@ -228,7 +229,8 @@ var y = d3.scale.linear()
 
 var xAxis = d3.svg.axis()
     .scale(x)
-    .orient("bottom");
+    .orient("bottom")
+    .tickValues([1, 15, 31, 50, 65, 79]);;
 
 var yAxis = d3.svg.axis()
     .scale(y)
@@ -239,7 +241,7 @@ var tip = d3.tip()
   .attr('class', 'd3-tip')
   .offset([-10, 0])
   .html(function(d) {
-    return "<strong>Famiglie a "+ d.euro +"000 euro:</strong> <span style='color:red'>" + d.barre + "</span>";
+    return "<strong>Famiglie a "+ d.euro +".000 euro</strong>";
   })
 
 var svg = d3.select("#d3").append("svg")
