--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.2.2/d3.v3.min.js"></script>
   <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
-  <link href="d3-tip.css" rel="stylesheet">
+  <link href="d3.css" rel="stylesheet">
 </head>
     <body>
       <div class="container">   
@@ -291,53 +291,7 @@ function type(d) {
 }
 
 </script>
-<style>
-        .bar
-        {
-            fill: orange;
-            stroke: oranged;
-            margin: 3px 3px;
-            display: inline-block;
-	        border:3px outset #69c;
-	        border-bottom:1px solid #000;
-	        border-radius:2px 2px 0 0;
-            
-        }
-        .bar:hover {
-            fill: orangered;
-        }
-        .label
-        {
-            font-family: Verdana;
-            font-size: 15pt;
-            color: gray;
-            fill-opacity: .6;
-        }
-        .x_axis,
-        .y_axis {
-            font-size: .6em;
-            fill: none;
-            stroke: grey;
-            stroke-width: 1;
-            shape-rendering: crispEdges;
-        }
-        .value
-        {
-            font-family: Verdana;
-            font-size: 11pt;
-            color: gray;
-            fill-opacity: .6;
-        }
 
-        .tick_label
-        {
-            font-size: 15pt;
-            font-family: Verdana;
-            color: gray;
-            fill-opacity: .6;
-        }
-        
-</style>
 </body>
 </html>
 
