--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           
             <div class="col-md-5" style="margin-top:35px;"  >
                 <div id="stage2" style="display:none">
-                  qui appare il grafico col posizionamento dell&apos;utente
+                  Famiglie italiane:
                   <div id="d3"></div>
                 </div>
             </div>
@@ -215,80 +215,81 @@
 
 <script>
 
-var margin = {top: 40, right: 20, bottom: 30, left: 40},
-    width = 475 - margin.left - margin.right,
-    height = 300 - margin.top - margin.bottom;
+    var margin = {top: 40, right: 20, bottom: 30, left: 40},
+        width = 475 - margin.left - margin.right,
+        height = 300 - margin.top - margin.bottom;
 
-var format = d3.format(""); // come formattare indicatori asse Y
+    var format = d3.format(""); // come formattare indicatori asse Y
 
-var x = d3.scale.ordinal()
-    .rangeRoundBands([0, width], .1);
+    var x = d3.scale.ordinal()
+        .rangeRoundBands([0, width], .1);
 
-var y = d3.scale.linear()
-    .range([height, 0]);
+    var y = d3.scale.linear()
+        .range([height, 0]);
 
-var xAxis = d3.svg.axis()
-    .scale(x)
-    .orient("bottom")
-    .tickValues([1, 15, 31, 50, 65, 79]);;
+    var xAxis = d3.svg.axis()
+        .scale(x)
+        .orient("bottom")
+        .tickValues([1, 15, 31, 50, 65, 79]);;
 
-var yAxis = d3.svg.axis()
-    .scale(y)
-    .orient("left")
-    .tickFormat(format);
+    var yAxis = d3.svg.axis()
+        .scale(y)
+        .orient("left")
+        //.tickFormat(format);
 
-var tip = d3.tip()
-  .attr('class', 'd3-tip')
-  .offset([-10, 0])
-  .html(function(d) {
-    return "<strong>Famiglie con "+ d.euro +".000 euro<br>di reddito netto</strong>";
-  })
+    var tip = d3.tip()
+      .attr('class', 'd3-tip')
+      .offset([-10, 0])
+      .html(function(d) {
+        return "<strong>Famiglie con "+ d.euro +".000 euro<br>di reddito netto</strong>";
+      })
 
-var svg = d3.select("#d3").append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+    var svg = d3.select("#d3").append("svg")
+        .attr("width", width + margin.left + margin.right)
+        .attr("height", height + margin.top + margin.bottom)
+      .append("g")
+        .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-svg.call(tip);
+    svg.call(tip);
 
-d3.csv("barre.csv", type, function(error, data) {
-  x.domain(data.map(function(d) { return d.euro; }));
-  y.domain([0, d3.max(data, function(d) { return d.barre; })]);
+    d3.csv("barre.csv", type, function(error, data) {
+      x.domain(data.map(function(d) { return d.euro; }));
+      y.domain([0, d3.max(data, function(d) { return d.barre; })]);
 
-  svg.append("g")
-      .attr("class", "x_axis")
-      .attr("transform", "translate(0," + height + ")")
-      .call(xAxis);
+      svg.append("g")
+          .attr("class", "x_axis")
+          .attr("transform", "translate(0," + height + ")")
+          .call(xAxis);
 
-  svg.append("g")
-      .attr("class", "y_axis")
-      .call(yAxis)
-    .append("text")
-      .attr("class", "value")
-      .attr("transform", "rotate(-90)")
-      .attr("y", 6)
-      .attr("dy", ".71em")
-      .style("text-anchor", "end")
-      .text("Migliaia di famiglie");
+      svg.append("g")
+          .attr("class", "y_axis")
+          .call(yAxis)
+        .append("text")
+          .attr("class", "value")
+          .attr("transform", "rotate(-90)")
+          .attr("y", 6)
+          .attr("dy", ".71em")
+          .style("text-anchor", "end")
+          .text("Migliaia di famiglie");
 
-  svg.selectAll(".bar")
-      .data(data)
-    .enter().append("rect")
-      .attr("class", "bar")
-      .attr("x", function(d) { return x(d.euro); })
-      .attr("width", x.rangeBand())
-      .attr("y", function(d) { return y(d.barre); })
-      .attr("height", function(d) { return height - y(d.barre); })
-      .on('mouseover', tip.show)
-      .on('mouseout', tip.hide)
+      svg.selectAll(".bar")
+          .data(data)
+        .enter().append("rect")
+          .attr("class", "bar")
+          .attr("style", "margin-left:5px;")
+          .attr("x", function(d) { return x(d.euro); })
+          .attr("width", x.rangeBand())
+          .attr("y", function(d) { return y(d.barre); })
+          .attr("height", function(d) { return height - y(d.barre); })
+          .on('mouseover', tip.show)
+          .on('mouseout', tip.hide)
 
-});
+    });
 
-function type(d) {
-  d.barre = +d.barre;
-  return d;
-}
+    function type(d) {
+      d.barre = +d.barre;
+      return d;
+    }
 
 </script>
 
