--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                             <div class="row">
                                 <div class="col-md-6" id="amount" style="color:#777;font-size:20px;text-align:center;"></div>
                             </div>
-                            <div class="row">
+                            <!-- <div class="row">
                                 <div class="col-md-6" id="amount_integer" style="color:#777;font-size:20px;text-align:center;"></div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
 
@@ -133,7 +133,7 @@
             
             // Set the initial slider amount in the #amount div element
             var value = $( "#slider" ).slider( "value" );
-            $( "#amount_integer" ).html( 40 );
+            //$( "#amount_integer" ).html( 40 );
             $( "#amount" ).html( status[2] );
             $("[name=income]").focus();
            
