--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             $("#stage1").css("display", "none")
             $("#stage2").css("display", "block")
             $("#stage2").append("<span>"+params+"</span>")
-            $("#stage2").append("<span><a href='/quattrogatti'>Torna al form</a></span>")
+            $("#stage2").append("<br><span><a href='/quattrogatti'>Torna al form</a></span>")
         }
         else {   
                         
