--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
     <body>
       <div class="container">   
           <div class="row">      
-              <h2>Demo per form Infografica</h2>
-                 <h5>ci sono tre possibili modi per presentare gli aiuti: come titolo sopra il campo, come placeholder all'interno, come aiuto sotto il campo. 
-            Oppure come indicato nella slide inviatami con un hover (non presente per ora nel demo). I valori della barra sono assolutamente
-            non indicativi, ovvero i valori corrispondenti da &apos;molto povero&apos; a &apos;ricco&apos;, quello che conta &egrave; il valore numerico 
-            sottostante. Si pu&ograve; decidere cosa indicare, se la dicitura o l&apos;intero. Pagina 2 ancora in lavorazione</h5>
+              <h2>Demo Infografica</h2>
+                 <h5>Stage 1 completato. Stage 2 completo al 50%, mancano indicatori della posizione presunta dall&apos;utente e della posizione
+              calcolata tramite i dati inseriti in stage 1.</h5>
           </div>
         </div>
         <div class="container" id="main"> 
@@ -75,8 +73,8 @@
 
                     '<input type="hidden" name="slider_value" value="50"/>'+
 
-                    '<div class="row">'+
-                      '<div class=""></div>'+
+        '<div class="row" style="margin-top:2%;">'+
+                      '<div class="col-md-2"></div>'+
                         '<div class="form-group col-md-4">'+
                             '<button class="btn btn-primary" id="submit" style="font-size:22px;">Invia</button>'+
                         '</div>'+
@@ -220,7 +218,8 @@
             //$( "#amount_integer" ).html( 40 );
             $( "#amount" ).html( status[2] );
             $("[name=income]").focus();
-           
+            
+            // componente bootstrap per il popout
             $(".popout").popover({container: 'body', html: true, placement: 'bottom'})
                 $("#income").mouseover(function(){
                     $("#popout_income").popover('show');
