--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     '<div class="row">'+
 
                         '<div class="form-group">'+
-                            '<label for="slider">La tua percezione</label>'+
+                            '<label for="slider">Come giudichi la tua situazione reddituale?</label>'+
                             '<div class="row">'+
                                 '<div class="col-md-6" name="slider" id="slider" style="margin-top:25px;"></div>'+
                             '</div>'+
@@ -179,7 +179,8 @@
             /* stage 2 */
             $("#main").html(stage2)
             drawBars();
-            $("#stage2").append("<span>"+params+"</span>")
+            equivalent = params[0][1] / (1+(params[1][1]) + (params[2][1] * .3))
+            $("#stage2").append("<span>"+params+"</span> = "+equivalent)
             $("#stage2").append("<br><span><a href='/quattrogatti'>Torna al form</a></span>")
             /* fine definizione stage 2 */
         }
