--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
             $("#main").html(stage2)
             drawBars();
             equivalent = params[0][1] / (1+(params[1][1]) + (params[2][1] * .3))
+            console.log(params[0][1], params[1][1], params[2][1], equivalent)
             $("#stage2").append("<span>"+params+"</span> = "+equivalent)
             $("#stage2").append("<br><span><a href='/quattrogatti'>Torna al form</a></span>")
             /* fine definizione stage 2 */
