--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.2.2/d3.v3.min.js"></script>
   <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+  <script src="jquery.csv-0.71.min.js "></script>
+   
   <link href="d3.css" rel="stylesheet">
 </head>
     <body>
@@ -181,6 +183,16 @@
             drawBars();
             equivalent = params[0][1] / (1+Math.max(params[1][1]-1,0) + (params[2][1] * .3))
             console.log(params[0][1], params[1][1], params[2][1], equivalent)
+            $.ajax({
+                  type: "GET",
+                  url: "cutoffs.csv",
+                  dataType: "text",
+                  success: function(data) {
+                    var result = $.csv.toObjects(data);
+                    console.log(result, equivalent)
+                  }
+                 });
+            
             $("#stage2").append("<span>"+params+"</span> = "+equivalent)
             $("#stage2").append("<br><span><a href='/quattrogatti'>Torna al form</a></span>")
             /* fine definizione stage 2 */
