--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
                     console.log(result)
                     for (i in result){
                         if (result[i].cutoff > equivalent){
-                          i = parseInt(i)
-                          percent=result[i-1]perc
+                          i = parseInt(i)-1
+                          percent=result[i].perc
                         } 
 
                     }
