--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     var result = $.csv.toArrays(data);
                     var percent = 0;
                     console.log(result)
-                    for (var i=0; i < result.length; i++){
+                    /*for (var i=0; i < result.length; i++){
                         //console.log(result[i])
                         if (parseInt(result[i].cutoff) > equivalent){
                           i = parseInt(i)-1
@@ -203,6 +203,7 @@
                     $("#stage2").append(
                               "<span>Hai un reddito equivalente di:</span> "+equivalent+"euro<br/>"+
                               "Sei più ricco del "+percent+"% degli italiani<br/><br/>")
+                  */
                   }
                  });
             
