--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     console.log(result)
                     for (var i=1; i < result.length; i++){
                         //console.log(result[i])
-                        if (parseInt(result[i][0]]) > equivalent){
+                        if (parseInt(result[i][0]) > equivalent){
                           i = parseInt(i)-1
                           percent=result[i][1]
                         } 
