--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             $("#main").html(stage2)
             drawBars();
             
-            console.log(params[0][1], params[1][1], params[2][1], equivalent)
+            console.log(params[0][1], params[1][1], params[2][1])
             $.ajax({
                   type: "GET",
                   url: "cutoffs.csv",
