--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
                     var result = $.csv.toObjects(data);
                     var equivalent = parseInt(params[0][1] / (1+Math.max(params[1][1]-1,0) + (params[2][1] * .3)))
                     var percent = 1;
-                    console.log(Object.keys(result).length)
-                    for (var i=0; i < Object.keys(result).length; i++){
+                    console.log(result, Object.keys(result).length, equivalent)
+                    /*for (var i=0; i < Object.keys(result).length; i++){
                         //console.log(result[i])
                         if (parseInt(result[i].cutoff) > equivalent){
                           i = parseInt(i)-1
@@ -205,7 +205,7 @@
                     $("#stage2").append(
                               "<span>Hai un reddito equivalente di:</span> "+equivalent+" euro<br/>"+
                               "Sei più ricco del "+percent+"% degli italiani<br/><br/>")
-                  
+                  */
                   }
                  });
             
