--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@
                   dataType: "text",
                   success: function(data) {
                     var result = $.csv.toObjects(data);
-                    var equivalent = parseInt(params[0][1] / (1+Math.max(params[1][1]-1,0) + (params[2][1] * .3)))
+                    var equivalent = params[0][1] / (1+Math.max(params[1][1]-1,0) + (params[2][1] * .3))
                     var percent = 1;
-                    console.log(result, Object.keys(result).length, equivalent)
+                    console.log(result, equivalent, Object.keys(result).length)
                     /*for (var i=0; i < Object.keys(result).length; i++){
                         //console.log(result[i])
                         if (parseInt(result[i].cutoff) > equivalent){
