--- a/index.html
+++ b/index.html
@@ -192,11 +192,11 @@
                     var equivalent = params[0][1] / (1+Math.max(params[1][1]-1,0) + (params[2][1] * .3))
                     var percent = 1;
                     console.log(result, equivalent, Object.keys(result).length)
-                    /*for (var i=0; i < Object.keys(result).length; i++){
+                    for (var i=0; i < Object.keys(result).length; i++){
                         //console.log(result[i])
-                        if (parseInt(result[i].cutoff) > equivalent){
-                          i = parseInt(i)-1
-                          percent=result[i].perc
+                        if (result[i]['cutoff'] > equivalent){
+                          p = parseInt(i)-1
+                          percent=result[p]['perc']
 
                         } 
 
@@ -205,7 +205,7 @@
                     $("#stage2").append(
                               "<span>Hai un reddito equivalente di:</span> "+equivalent+" euro<br/>"+
                               "Sei più ricco del "+percent+"% degli italiani<br/><br/>")
-                  */
+                  
                   }
                  });
             
