--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
                         if (result[i]['cutoff'] > equivalent){
                           p = parseInt(i)-1
                           percent=result[p]['perc']
+                          return
 
                         } 
 
