--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
                     }
                     console.log(equivalent, percent, Math.round(Math.ceil(equivalent)/1000)*1000)
-                    $("#"+Math.round(Math.ceil(equivalent)/1000)*1000+"").toggleClass("hovered");
+                    $("#"+Math.round(Math.floor(equivalent)/1000)*1000+"").toggleClass("hovered");
                     $("#stage2").append(
                               "<span>Hai un reddito equivalente di:</span> "+equivalent+" euro<br/>"+
                               "Sei più ricco del "+percent+"% degli italiani<br/><br/>")
