--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
                         } 
 
                     }
-                    console.log(equivalent, percent, Math.round(Math.ceil(equivalent)/1000)*1000)
-                    $("#"+Math.round(Math.floor(equivalent)/1000)*1000+"").toggleClass("hovered");
+                    console.log(equivalent, percent, Math.floor(equivalent)/1000))
+                    $("#"+Math.floor(equivalent)/1000)+"").toggleClass("hovered");
                     $("#stage2").append(
                               "<span>Hai un reddito equivalente di:</span> "+equivalent+" euro<br/>"+
                               "Sei più ricco del "+percent+"% degli italiani<br/><br/>")
