--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         } 
 
                     }
-                    console.log(equivalent, percent, Math.floor(equivalent)/1000))
+                    console.log(equivalent, percent, Math.floor(equivalent/1000))
                     $("#"+Math.floor(equivalent)/1000)+"").toggleClass("hovered");
                     $("#stage2").append(
                               "<span>Hai un reddito equivalente di:</span> "+equivalent+" euro<br/>"+
