--- a/index.html
+++ b/index.html
@@ -204,7 +204,8 @@
 
                     }
                     console.log(equivalent, percent, Math.floor(equivalent/1000))
-                    $("#"+Math.floor(equivalent/1000)+"").toggleClass("hovered");
+                    id = Math.floor(equivalent/1000)
+                    $("#"+id+"").addClass("equivalent");
                     $("#stage2").append(
                               "<span>Hai un reddito equivalente di:</span> "+equivalent+" euro<br/>"+
                               "Sei più ricco del "+percent+"% degli italiani<br/><br/>")
