--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                     }
                     console.log(equivalent, percent, Math.floor(equivalent/1000))
                     id = Math.floor(equivalent/1000)
-                    $("#"+id+"").addClass("equivalent");
+                    $("#"+id+"").attr("fill", "oranged");
                     $("#stage2").append(
                               "<span>Hai un reddito equivalente di:</span> "+equivalent+" euro<br/>"+
                               "Sei più ricco del "+percent+"% degli italiani<br/><br/>")
