--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             $.ajax({
                   type: "GET",
                   url: "cutoffs.csv",
-                  async: false;
+                  async: false,
                   dataType: "text",
                   success: function(data) {
                     var result = $.csv.toObjects(data);
