--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     }
                     console.log(equivalent, percent, Math.floor(equivalent/1000))
                     id = Math.floor(equivalent/1000)
-                    $("#"+id).attr("fill", "#B80");
+                    $("#"+id).attr("fill", "orange");
                     $("#stage2").append(
                               "<span>Hai un reddito equivalente di:</span> "+equivalent+" euro<br/>"+
                               "Sei più ricco del "+percent+"% degli italiani<br/><br/>")
