--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
       <div class="container">   
           <div class="row">      
               <h2>Demo Infografica</h2>
-                 <h5>Stage 1 completato. Stage 2 completo al 50%, mancano indicatori della posizione presunta dall&apos;utente e della posizione
-              calcolata tramite i dati inseriti in stage 1.</h5>
+                 <h5>Stage 1 completato. Stage 2 calcolo e presentazione dei risultati completato, necessario feedback ed aggiustamenti dal punto di vista grafico.</h5>
           </div>
         </div>
         <div class="container" id="main"> 
