--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
             $.ajax({
                   type: "GET",
                   url: "cutoffs.csv",
+                  async:false,
                   dataType: "text",
                   success: function(data) {
                     var result = $.csv.toObjects(data);
@@ -208,6 +209,7 @@
 
                     id = Math.floor(equivalent/1000)
                     
+                    
                     $("#stage2").append(
                               "<span>Hai un reddito equivalente di:</span> "+equivalent+" euro<br/>"+
                               "Sei più ricco del "+percent+"% degli italiani<br/><br/>")
@@ -227,7 +229,7 @@
                 } //end success function
 
             });
-
+            var equivalent = Math.ceil(params[0][1] / (1+Math.max(params[1][1]-1,0) + (params[2][1] * .3)))
             $("#"+id).attr("fill", "orangered");
 
             /* fine definizione stage 2 */
