--- a/index.html
+++ b/index.html
@@ -198,16 +198,15 @@
                   dataType: "text",
                   success: function(data) {
                     var result = $.csv.toObjects(data);
-                    var equivalent = Math.ceil(params[0][1] / (1+Math.max(params[1][1]-1,0) + (params[2][1] * .3)))
+                    var equivalent = Math.floor(params[0][1] / (1+Math.max(params[1][1]-1,0) + (params[2][1] * .3)))
                     var percent = 1;
-                    console.log(result, equivalent, Object.keys(result).length)
+                    //console.log(result, equivalent, Object.keys(result).length)
                     for (var i=0; i < Object.keys(result).length; i++){
                         //console.log(result[i])
                         if (result[i]['cutoff'] > equivalent){
                           p = parseInt(i)-1
                           percent=result[p]['perc']
                           break
-
                         } 
 
                     }
