--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                   dataType: "text",
                   success: function(data) {
                     var result = $.csv.toObjects(data);
-                    var equivalent = Math.floor(params[0][1] / (1 + Math.max(params[1][1]-1,0) * .5 + (params[2][1] * .3)))
+                    var equivalent = Math.floor(params[0][1] / (1 + Math.max(params[1][1]-1,0) * .5 + params[2][1] * .3))
                     var percent = 1;
                     //console.log(result, equivalent, Object.keys(result).length)
                     for (var i=0; i < Object.keys(result).length; i++){
