--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         '<div class="row" style="margin-top:2%;">'+
                       '<div class="col-md-2"></div>'+
                         '<div class="form-group col-md-4">'+
-                            '<button class="btn btn-primary" id="submit" style="font-size:22px;">Invia</button>'+
+                            '<button class="btn btn-primary" id="submit" style="font-size:22px;">Scopri la tua posizione reddituale</button>'+
                         '</div>'+
                     '</div>'+
                 '</form>'+
